Add implementation of naryOperation